--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Project10SeriousGameGoodCause/Temp/UnityLockfile
+*.log
+*.bakert
