Removed Removed Temp files and my own tool is on Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 Project10SeriousGameGoodCause/Temp
 *.log
 *.bakert
+Project10SeriousGameGoodCause/Assets/EasyScripts
